--- a/todo/frontend/package.json
+++ b/todo/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "src",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/client.js",
+  "main": "./src/index.js",
   "scripts": {
     "build": "webpack --config=./build/webpack.config.js"
   },
