--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,10 @@ upstream todo-frontend {
   server todo-frontend:3000;
 }
 
+upstream news-frontend {
+  server news-frontend:3000;
+}
+
 server {
   listen 3000;
 
@@ -9,6 +13,10 @@ server {
 
   location /todo/ {
     proxy_pass http://todo-frontend/;
+  }
+
+  location /news/ {
+    proxy_pass http://news-frontend/;
   }
 
   location / {
