--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,9 @@ services:
     ports:
      - "4001:3000"
 
+  news-frontend:
+    build:
+      context: ./news/frontend
+      dockerfile: build/Dockerfile
+    ports:
+     - "4003:3000"
