--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,7 @@
+upstream blazor-custom-elements {
+  server blazor-custom-elements:3000;
+}
+
 upstream todo-frontend {
   server todo-frontend:3000;
 }
@@ -6,10 +10,18 @@ upstream news-frontend {
   server news-frontend:3000;
 }
 
+upstream interest-frontend {
+  server interest-frontend:80;
+}
+
 server {
   listen 3000;
 
   ssi on;
+
+  location /blazor-custom-elements/ {
+    proxy_pass http://blazor-custom-elements/;
+  }
 
   location /todo/ {
     proxy_pass http://todo-frontend/;
@@ -17,6 +29,10 @@ server {
 
   location /news/ {
     proxy_pass http://news-frontend/;
+  }
+
+  location /interest/ {
+    proxy_pass http://interest-frontend/;
   }
 
   location / {
